--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "/react-demo",
   "browserslist": {
     "production": [
       ">0.2%",
